--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,10 @@ add_executable(test_clock test_clock.cpp)
 target_link_libraries(test_clock PRIVATE automata Catch2::Catch2WithMain)
 catch_discover_tests(test_clock)
 
+add_executable(test_zonefunctions test_zonefunctions.cpp)
+target_link_libraries(test_zonefunctions PRIVATE automata Catch2::Catch2WithMain)
+catch_discover_tests(test_zonefunctions)
+
 add_executable(testta test_ta.cpp test_ta_region.cpp test_ta_print.cpp test_ta_product.cpp)
 target_link_libraries(testta PRIVATE automata PRIVATE Catch2::Catch2WithMain)
 catch_discover_tests(testta)
